# openmw

./: CMakeLists.txt
CI/: before_script.msvc.sh
apps/openmw/: CMakeLists.txt  pch.h
components/: CMakeLists.txt
components/crashcatcher/: crashcatcher.cpp
